# crypto

./: .gitignore  Cargo.toml  Makefile.toml  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: android.yml  ci.yml  ios.yml  lints.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/chat/owl/owlchat_crypto/: OwlchatCryptoPlugin.kt
crypto/: Cargo.toml
crypto/src/: errors.rs  lib.rs  util.rs
ffi/: Cargo.toml  binding.h  build.rs  def.proto
ffi/protos/: def.proto
ffi/src/: lib.rs  macros.rs
ffi/src/pb/: mod.rs  owlchat.rs
ffi/tests/: def.pb.cc  def.pb.h  full.c  full.cc  full.h  full.rs
ios/: owlchat_crypto.podspec
ios/Classes/: OwlchatCryptoPlugin.h  OwlchatCryptoPlugin.m  SwiftOwlchatCryptoPlugin.swift  binding.h
keystore/: Cargo.toml
keystore/src/: buffer.rs  errors.rs  lib.rs  util.rs
lib/: allo_isolate.dart  ffi.dart  ffi_ext.dart  owlchat_crypto.dart
scripts/: protogen.sh
test/: simple_test.dart
