[package]
name = "owlchat-crypto"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
chacha20poly1305 = { version = "0.9", default-features = false, features = ["std"] }
tiny-bip39 = { version = "0.8", default-features = false }
curve25519-dalek = { version = "4.0.0-pre.1", default-features = false, features = ["alloc", "u64_backend"] }
x25519-dalek = { version = "2.0.0-pre.1", default-features = false }
subtle = { version = "2.4", default-features = false }
thiserror = "1.0"
zeroize = "1.4.3"
sha2 = "0.10.0"
