[package]
name = "owlchat-crypto-ffi"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
name = "owlchat_crypto"
# this value will change depending on the target os
# for iOS it would be `staticlib`
# for android it would be `c-dylib`
crate-type = ["cdylib", "staticlib"]

[dependencies]
crypto = { path = "../crypto", package = "owlchat-crypto" }
allo-isolate = { version = "0.1.12", optional = true }
prost = "0.9.0"
prost-types = "0.9.0"
once_cell = "1.7"

[dev-dependencies]
tempfile = "3.1"

[build-dependencies]
cbindgen = "0.20"
prost-build = "0.9.0"

[features]
default = ["dart-ffi"]
dart-ffi = ["allo-isolate"]
