[package]
name = "owlchat-keystore"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
chacha20poly1305 = { version = "0.7", default-features = false, features = ["std", "chacha20"] }
tiny-bip39 = { version = "0.8", default-features = false }
curve25519-dalek = "3.0"
x25519-dalek = "1.1"
subtle = "2.4"
thiserror = "1.0"
zeroize = "1.1"
sha2 = "0.9"
